@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-33
+2015-05-22 Mikhail S. Dubrovin	
+- NDArrIOV1 - use enumerated m_status in stead of string, updated method str_status() (for PSAS-139).
+	
 Tag: V00-05-32
 2015-05-21 Mikhail S. Dubrovin	
 - NDArrIOV1 - improve messages (PSAS-148)
